# memoshelve

./: .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  test_memoshelve.py  test_memoshelve_integration.py
.github/workflows/: ci.yml  publish.yml
src/memoshelve/: __init__.py  inspect_extra.py
tests/: test_file_lock.py  test_memoshelve_integration.py
