[project]
name = "memoshelve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
robust = ["dill>=0.4.0", "stablehash>=0.2.3"]
testing = ["pytest>=8.4.1"]
dev = ["pre-commit>=4.2.0", "memoshelve[testing]"]
all = ["memoshelve[robust,testing,dev]"]
