[project]
name = "memoshelve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
robust = ["dill>=0.4.0", "stablehash>=0.2.3"]
testing = [
    "numpy>=2.3.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
dev = ["pre-commit>=4.2.0", "memoshelve[testing]"]
all = ["memoshelve[robust,testing,dev]"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
