[project]
name = "memoshelve"
version = "1.0.7"
description = "A persistent memoization decorator using Python's shelve with two-tier caching (memory + disk)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# n.b. typing-extensions is required for stablehash, but not declared, cf https://github.com/NiklasRosenstein/python-stablehash/issues/9
robust = ["dill>=0.4.0", "stablehash>=0.2.3", "typing-extensions>=4.14.1"]
testing = [
    "numpy>=2.3.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "memoshelve[robust]",
]
dev = ["pre-commit>=4.2.0", "memoshelve[testing]"]
all = ["memoshelve[robust,testing,dev]"]

[tool.setuptools]
package-dir = { "" = "src" }

[project.urls]
"Homepage" = "https://github.com/JasonGross/memoshelve"
"Bug Tracker" = "https://github.com/JasonGross/memoshelve/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
